# ChangeLog for app-editors/padre
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/padre/ChangeLog,v 1.21 2012/01/24 15:50:34 tove Exp $

*padre-0.940.0 (24 Jan 2012)

  24 Jan 2012; Torsten Veller <tove@gentoo.org> +padre-0.940.0.ebuild:
  Version bump

*padre-0.920.0 (02 Dec 2011)

  02 Dec 2011; Torsten Veller <tove@gentoo.org> +padre-0.920.0.ebuild:
  Version bump (#391847)

*padre-0.900.0 (21 Aug 2011)

  21 Aug 2011; Torsten Veller <tove@gentoo.org> +padre-0.900.0.ebuild:
  Version bump

  11 Aug 2011; Torsten Veller <tove@gentoo.org> padre-0.880.0.ebuild:
  Add missing dependency: dev-perl/Capture-Tiny (#378739). Thanks to Sergiy
  Borodych

*padre-0.880.0 (09 Aug 2011)

  09 Aug 2011; Torsten Veller <tove@gentoo.org> +padre-0.880.0.ebuild:
  Version bump

*padre-0.860.0 (23 Jun 2011)

  23 Jun 2011; Torsten Veller <tove@gentoo.org> +padre-0.860.0.ebuild:
  Version bump

  20 Mar 2011; Torsten Veller <tove@gentoo.org> -padre-0.74.ebuild,
  -padre-0.76.ebuild, -padre-0.780.ebuild, -padre-0.800.ebuild,
  -padre-0.820.0.ebuild:
  Cleanup

*padre-0.840.0 (16 Mar 2011)

  16 Mar 2011; Torsten Veller <tove@gentoo.org> +padre-0.840.0.ebuild:
  Version bump

*padre-0.820.0 (27 Feb 2011)

  27 Feb 2011; Torsten Veller <tove@gentoo.org> +padre-0.820.0.ebuild:
  Version bump

*padre-0.800 (31 Jan 2011)

  31 Jan 2011; Torsten Veller <tove@gentoo.org> +padre-0.800.ebuild:
  Version bump

*padre-0.780 (15 Jan 2011)

  15 Jan 2011; Torsten Veller <tove@gentoo.org> +padre-0.780.ebuild:
  Version bump

*padre-0.76 (13 Dec 2010)

  13 Dec 2010; Torsten Veller <tove@gentoo.org> -padre-0.60.ebuild,
  -padre-0.61.ebuild, -padre-0.62.ebuild, -padre-0.63.ebuild,
  -padre-0.70.ebuild, -padre-0.72.ebuild, +padre-0.76.ebuild:
  Version bump. Cleanup

*padre-0.74 (15 Nov 2010)

  15 Nov 2010; Torsten Veller <tove@gentoo.org> +padre-0.74.ebuild:
  Version bump

*padre-0.72 (11 Oct 2010)
