@@ -1,24 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST Padre-0.84.tar.gz 1601993 RMD160 d90ce4d72a5ed4700f37b987fc781eb020f799ed SHA1 9fdf4b32c8b733d645e8657afd76bd9ef46440d9 SHA256 8e3390a96302ef460f94e3b50ec3fe9df9ace99fbac23ff5981e89af2076da6e
-DIST Padre-0.86.tar.gz 1637100 RMD160 d55ce0c0d3ebed6c2d2eb773508e199ca4688b38 SHA1 0614d34e9a4bb5473d2dd5367dd3a890c8607f56 SHA256 e232747a58dddb8df932832ca69af8472e9c202846e6c2f849509f5e536992f0
-DIST Padre-0.88.tar.gz 1680034 RMD160 fa2c4a4daa0530665b50a8623478afa646205727 SHA1 02d27fb33c5e6f1d48b728e45a1da08ddcede4b4 SHA256 c4e36db5eeaa752832ef335078fce5d463cf1c1d94523cef09a1f75e1b6cb395
-DIST Padre-0.90.tar.gz 1690985 RMD160 24e7ec10555c472403e2db341501f5efbe904125 SHA1 cfce4de4fb216aff5dc1e87cc0c141def39f9744 SHA256 807e29dfde998d533346321e1463c028fcd8be4a557420bd015436f4bfc72403
 DIST Padre-0.92.tar.gz 1821353 RMD160 37b844ff66b47fa501572dd30bff8383d15b82ab SHA1 bd124e266bf1e790901f7c67ff6551476d648c2b SHA256 f9d0804ec940453b96edca6760d0ac18e930572766fc1db3259bd86d30e9d541
 DIST Padre-0.94.tar.gz 1871534 RMD160 2a9489c8e446663a87428bdfaf9c7f0ecaa7a5a1 SHA1 61a297e02734febf9ecce6f0d8ace5a696350fb5 SHA256 a01a9f7dc44c5eafdcc9cf872af0ee1fdd51fe27b586f0f383bed882e8bac6fd
-EBUILD padre-0.840.0.ebuild 2715 RMD160 5ff085a996a216cb4d12aaf6e3dd5bfa005ed39f SHA1 b4a0ee7a3bf207c0ef93bec9649d35881bc3f39a SHA256 48539967200a0bacdf540b6c3b3b1f507be9ea4aa25ff803b91d351a2163d28f
-EBUILD padre-0.860.0.ebuild 2718 RMD160 5b642874394a519902265f48c100cd4895779982 SHA1 c32c8340bd0dcc7cec20638bdb394384189c7be4 SHA256 2af50dc91bf689a0933cd2fe78b9b183e840ba98f3481932a63b94aacf63be25
-EBUILD padre-0.880.0.ebuild 2654 RMD160 a455c794cd1b75b2adc241d4104d876aef0c08e8 SHA1 206c41bb4bf0f78297723f66d94530b6f50991c4 SHA256 5fe9ec9c9a4cb6141d4ad5986be2ec2bafd84fe5b8dc260632277cb4f92c44cd
-EBUILD padre-0.900.0.ebuild 2622 RMD160 a47cb6778b5a09d90640464feadf88cffdbb93b3 SHA1 8f6a7e6ffcd60ff62126d43946f15972f5c63d8e SHA256 5c240e34837fbf27dbbbcb5bbd362cc2df809ca3e390db330e93b68945b8dabd
 EBUILD padre-0.920.0.ebuild 2788 RMD160 58388d8361aba7171cbb9b2ac76d6fd9f3e43757 SHA1 af0bbf4a55c8270ac845260ad4879f51d42d649b SHA256 4eaf00cdc906b6f641b1a10b4c549af1cf7612b0c040e026569fd56b974d3690
-EBUILD padre-0.940.0.ebuild 2800 RMD160 79c1bd8fca7fbd67eee3fad1587e0abaab43de73 SHA1 481c00f35000fd8995f82ba27cdb31f3ee3b1db8 SHA256 2c17866ac7af58bb0aad6e1eb726eb853e972cb4c7e4ba5853f065d6c8d901e9
-MISC ChangeLog 6030 RMD160 c61b1edff9f08746b78e0b27d5e915509fdc8462 SHA1 e341649f3bca28645068bca94bfe3efbeee72690 SHA256 ce5b54d11ba4695711b88a81f65e5c34b2a53ae187b7c15d059f405b0fbac902
+EBUILD padre-0.940.0.ebuild 2779 RMD160 1f12bf620649d480b40e6508afb75330db1fd621 SHA1 f0a641c8e0a6657ae60e34d9663179fdb0bb9d00 SHA256 c30744294ebeeffa37c67622d1bd05e72055a26549674aa661f79d4672277903
+MISC ChangeLog 6262 RMD160 b7b95be909e9b1a4852ab13eafa8504711f68651 SHA1 2235389e7e9ba62bc1f51387385ee9b2db64c191 SHA256 2d442c9822ad19071da0c0ac4478d9591cc4a3f32ed50fdde1ec0af13bc12c82
 MISC metadata.xml 231 RMD160 7a591488c710e9b882dcbd363f6d027fe7647260 SHA1 6d7057b5b0443493e5108acc78f6ea989e413b92 SHA256 7787ff49989e62247aaf7e845fcfd072370202f51149ba8d442d92a3c084bdf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREIAAYFAk8e008ACgkQV3J2n04Eaux3FwCgyXuLBGcyj8B6RN9ZUXicZNrS
-JvYAmwdF4XDdrtq4HpITXSkhg1s+IS0L
-=IN8V
+iEYEAREIAAYFAk8hOb8ACgkQV3J2n04EauyVfACgqvtSGzrqHE45lkP620BYnqK/
+ZtYAnjTbHcxhBqA/TyOMxnIh5nE3ZfmR
+=kHQl
 -----END PGP SIGNATURE-----
